<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.alphabetka.TestMode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/interfaceButtons"
                android:layout_width="wrap_content"
                android:onClick="onBtnBack"
                android:text="@string/btn_back" />

            <TextView
                android:id="@+id/txtMistakes"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/txt_err"
                android:textColor="@color/colorMistakes"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="24dp"/>
            <TextView
                android:id="@+id/txtGood"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/txt_good"
                android:textColor="@color/colorGood"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginLeft="24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtLetter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorLetter"
            android:text="0"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="156sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnA"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/colorLetterA"
                android:textColor="@color/colorBtnText"
                android:onClick="onBtnA"
                android:text="@string/btn_letterA" />

            <Button
                android:id="@+id/btnB"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/colorLetterB"
                android:textColor="@color/colorBtnText"
                android:onClick="onBtnB"
                android:text="@string/btn_letterB" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
